--- a/index.html
+++ b/index.html
@@ -29,6 +29,24 @@
         </button>
       </div>
     </div>
+
+    <!-- Profil utilisateur ajouté ici -->
+      <div class="user-profile" id="userProfile">
+        <div class="profile-avatar">U</div>
+        <div class="profile-dropdown" id="profileDropdown">
+          <div class="profile-info">
+            <div class="profile-name">Utilisateur</div>
+            <div class="profile-email">utilisateur@example.com</div>
+          </div>
+          <ul class="profile-menu">
+            <li><i class="fas fa-user"></i> Mon profil</li>
+            <li><i class="fas fa-cog"></i> Paramètres</li>
+            <li><i class="fas fa-history"></i> Historique</li>
+            <li><i class="fas fa-sign-out-alt"></i> Déconnexion</li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </header>
 
   <main>
@@ -98,7 +116,7 @@
         </div>
       </section>
     </div>
-    
+
     <!-- Page Favoris -->
     <div class="favorites-page" id="favoritesPage">
       <div class="section-title">
