--- a/index.html
+++ b/index.html
@@ -19,24 +19,24 @@
       
       <div class="nav-buttons">
         <button class="nav-btn active" id="homeBtn" aria-label="Accueil">
-          <i class="fas fa-home"></i> Accueil
+          <i class="fas fa-home"></i>
         </button>
         <button class="nav-btn" id="favoritesBtn" aria-label="Favoris">
-          <i class="fas fa-heart"></i> Favoris
+          <i class="fas fa-heart"></i> 
         </button>
         <button class="nav-btn" id="themeToggle" aria-label="Changer le mode clair/sombre">
-          <i class="fas fa-moon"></i> Mode
+          <i class="fas fa-moon"></i> 
         </button>
       </div>
     </div>
 
     <!-- Profil utilisateur ajouté ici -->
       <div class="user-profile" id="userProfile">
-        <div class="profile-avatar">U</div>
+        <div class="profile-avatar">L</div>
         <div class="profile-dropdown" id="profileDropdown">
           <div class="profile-info">
-            <div class="profile-name">Utilisateur</div>
-            <div class="profile-email">utilisateur@example.com</div>
+            <div class="profile-name">Len</div>
+            <div class="profile-email">len@gmail.com</div>
           </div>
           <ul class="profile-menu">
             <li><i class="fas fa-user"></i> Mon profil</li>
