--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
   </header>
 
   <main>
-    <!-- Page d'accueil -->
-    <div id="homePage">
+  <!-- Page d'accueil -->
+  <div id="homePage">
       <section class="hero">
         <div class="hero-content">
           <h1 class="hero-title">Stranger Things</h1>
@@ -65,6 +65,14 @@
             </button>
           </div>
         </div>
+      </section>
+
+      <!-- Section résultats de recherche -->
+      <section id="searchResultsSection" style="display:none;">
+        <div class="section-title">
+          <h2>Résultats de recherche</h2>
+        </div>
+        <div class="movies-row" id="searchResultsRow"></div>
       </section>
 
       <!-- Sections films (Populaires, Action, etc.) -->
