--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AniX</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/profile.css">
+  <link rel="stylesheet" href="css/hero.css">
+  <link rel="stylesheet" href="css/search.css">
+
 </head>
 <body>
   <header>
@@ -144,6 +148,15 @@
   <!-- MODAL -->
   <div id="movieModal" role="dialog" aria-modal="true" aria-hidden="true"></div>
 
-  <script src="main.js"></script>
+  <script src="js/config.js"></script>
+  <script src="js/navigation.js"></script>
+  <script src="js/theme.js"></script>
+  <script src="js/profile.js"></script>
+  <script src="js/search.js"></script>
+  <script src="js/favorites.js"></script>
+  <script src="js/modal.js"></script>
+  <script src="js/movies.js"></script>
+  <script src="js/main.js"></script>
+
 </body>
 </html>
