--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
   <link rel="stylesheet" href="css/profile.css">
   <link rel="stylesheet" href="css/hero.css">
   <link rel="stylesheet" href="css/search.css">
+  <link rel="stylesheet" href="css/variables.css">
+  <link rel="stylesheet" href="css/base.css">
+  <link rel="stylesheet" href="css/movies.css">
+  <link rel="stylesheet" href="css/header.css">
+  <link rel="stylesheet" href="css/favorites.css">
+  <link rel="stylesheet" href="css/modal.css">
+  <link rel="stylesheet" href="css/recommandations.css">
+  <link rel="stylesheet" href="css/loading.css">
+  <link rel="stylesheet" href="css/responsive.css">
+
 
 </head>
 <body>
