--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <link rel="stylesheet" href="css/modal.css">
   <link rel="stylesheet" href="css/recommandations.css">
   <link rel="stylesheet" href="css/loading.css">
+  <link rel="stylesheet" href="css/footer.css">
+  <link rel="stylesheet" href="css/animations.css">
   <link rel="stylesheet" href="css/responsive.css">
 
 </head>
@@ -26,7 +28,7 @@
       <span>AniX</span>
     </div>
     
-    <div class="nav-container">
+    <nav class="nav-container" role="navigation" aria-label="Navigation principale">
       <div class="search-wrapper">
         <input type="text" id="searchInput" placeholder="Rechercher un film..." aria-label="Recherche de film">
         <button id="clearSearchBtn" class="clear-search-btn" aria-label="Effacer la recherche" style="display:none">
@@ -34,20 +36,24 @@
         </button>
       </div>
       
-      <div class="nav-buttons">
-        <button class="nav-btn active" id="homeBtn" aria-label="Accueil">
+      <div class="nav-buttons" role="menubar">
+        <button class="nav-btn active" id="homeBtn" aria-label="Accueil" role="menuitem" aria-current="page">
           <i class="fas fa-home"></i>
         </button>
-        <button class="nav-btn" id="favoritesBtn" aria-label="Favoris">
+        <button class="nav-btn" id="favoritesBtn" aria-label="Favoris" role="menuitem">
           <i class="fas fa-heart"></i> 
         </button>
-        <button class="nav-btn" id="themeToggle" aria-label="Changer le mode clair/sombre">
+        <button class="nav-btn" id="themeToggle" aria-label="Changer le mode clair/sombre" role="menuitem">
           <i class="fas fa-moon"></i> 
         </button>
       </div>
-    </div>
+    </nav>
 
       <div class="user-profile" id="userProfile">
+        <div class="notification-bell" id="notificationBell" title="Notifications" tabindex="0" aria-label="Notifications">
+          <i class="fas fa-bell"></i>
+          <span class="notif-badge" id="notifBadge" style="display:none;">1</span>
+        </div>
         <div class="profile-avatar">L</div>
         <div class="profile-dropdown" id="profileDropdown">
           <div class="profile-info">
@@ -151,6 +157,12 @@
   <!-- MODAL -->
   <div id="movieModal" role="dialog" aria-modal="true" aria-hidden="true"></div>
 
+  <footer class="site-footer" role="contentinfo">
+    <div class="footer-bottom">
+      <p>&copy; 2025 AniX. Tous droits réservés.</p>
+    </div>
+  </footer>
+
   <script src="js/config.js"></script>
   <script src="js/navigation.js"></script>
   <script src="js/theme.js"></script>
@@ -159,7 +171,16 @@
   <script src="js/favorites.js"></script>
   <script src="js/modal.js"></script>
   <script src="js/movies.js"></script>
+  <script src="js/lazyload.js"></script>
   <script src="js/main.js"></script>
-
+  <script src="js/notifications.js"></script>
+  <!-- Commentaires pour expliquer la structure du document -->
+  <!-- 
+    Structure du site :
+    1. Header : Navigation principale et recherche
+    2. Main : Contenu principal avec héros et sections de films
+    3. Footer : Informations complémentaires et liens utiles
+    4. Scripts : Chargés à la fin pour optimiser le chargement
+  -->
 </body>
 </html>
